--- a/css/style-mod.css
+++ b/css/style-mod.css
@@ -59,6 +59,10 @@
     margin-bottom: 2em;
 }
 
+.btn{
+    margin-bottom: 1em;
+}
+
 /* service-bottom-right1 */
 .service-bottom-right1 a h4{
 	color:#337ab7;
